# PythonProjectManager

./: .gitignore  MANIFEST.in  PUBLISHING.md  PUBLISH_CHECKLIST.md  README.md  create_venv.py  debug_install.py  debug_main_call.py  handle_data.py  inspect_wheel.py  main.py  pyproject.toml  setup.cfg  test.ipynb  test_dry.py  triggerupload.bat  updatecli.sh
.github/: copilot-instructions.md
.github/workflows/: publish-pypi.yml
.pynstal/: interpreters.json
data/: interpreters.json  templates.json
pythonprojectmanager/: __init__.py  create_venv.py  handle_data.py  main.py  templates.json
scripts/: release.ps1
