[metadata]
name = ppm-cli
version = 0.1.0
description = CLI utility to manage Python virtual environments with auto-detection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/PythonProjectManager
author = Your Name
author_email = your.email@example.com
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent
    Topic :: System :: Systems Administration
    Topic :: Utilities
keywords = python virtualenv venv management cli

[options]
packages = find:
include_package_data = True
python_requires = >=3.10

[options.package_data]
pythonprojectmanager = templates.json

[options.entry_points]
console_scripts =
    ppm = pythonprojectmanager.main:cli
